updated form attributes and updated readme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="form-container">
 
-        <form action="#">
+        <form method="post" action='https://register-demo.freecodecamp.org'>
             <h2>Contact Us:</h2>
 
             <label for="name">Name: <input type="text" id="name" name="name" required></label>
